fix: About Me section width to avoid horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,7 @@ nav a:hover {
 /* ABOUT ME SECTION */
 
 .aboutMe-section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
